[gd_scene load_steps=5 format=3 uid="uid://bmqc6d4c3tqt4"]

[ext_resource type="Script" path="res://player/player.gd" id="1_qrn17"]
[ext_resource type="PackedScene" uid="uid://cnvrm83f3jean" path="res://user_interface/player_ui.tscn" id="2_krdbn"]
[ext_resource type="PackedScene" uid="uid://2ksrmb60su4e" path="res://camera/game_camera.tscn" id="3_28u4a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l6sqj"]

[node name="Player" type="Node2D"]
script = ExtResource("1_qrn17")

[node name="PlayerUI" parent="." instance=ExtResource("2_krdbn")]

[node name="Camera2D" parent="." instance=ExtResource("3_28u4a")]
position = Vector2(720, 406)
zoom = Vector2(0.8, 0.8)

[node name="Mouse" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource("CircleShape2D_l6sqj")

[connection signal="area_entered" from="Mouse" to="." method="_on_mouse_area_entered"]
[connection signal="area_exited" from="Mouse" to="." method="_on_mouse_area_exited"]
